// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="dropdown"
>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    className="btn btn-secondary"
    data-toggle="dropdown"
    onClick={[Function]}
    type="button"
  >
    ☰
  </button>
  <div
    aria-hidden={true}
    className="dropdown-menu"
    role="menu"
    tabIndex="-1"
  >
    <a
      className="dropdown-item"
      href="/workflows"
      onClick={[Function]}
      tabIndex="0"
      type={undefined}
    >
       Your Workflows 
    </a>
    <div>
      <div
        className="dropdown-divider"
        onClick={[Function]}
        tabIndex="-1"
        type={undefined}
      />
      <button
        className="dropdown-item"
        onClick={[Function]}
        tabIndex="0"
        type="button"
      >
         Undo 
      </button>
      <button
        className="dropdown-item"
        onClick={[Function]}
        tabIndex="0"
        type="button"
      >
         Redo 
      </button>
      <div
        className="dropdown-divider"
        onClick={[Function]}
        tabIndex="-1"
        type={undefined}
      />
    </div>
    <a
      className="dropdown-item"
      href="http://blog.cjworkbench.org"
      onClick={[Function]}
      tabIndex="0"
      type={undefined}
    >
       Help 
    </a>
    <a
      className="dropdown-item"
      href="/account/logout"
      onClick={[Function]}
      tabIndex="0"
      type={undefined}
    >
       Logout 
    </a>
  </div>
</div>
`;

exports[`renders correctly for workflows list page 1`] = `
<div
  className="dropdown"
>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    className="btn btn-secondary"
    data-toggle="dropdown"
    onClick={[Function]}
    type="button"
  >
    ☰
  </button>
  <div
    aria-hidden={true}
    className="dropdown-menu"
    role="menu"
    tabIndex="-1"
  >
    <a
      className="dropdown-item"
      href="http://blog.cjworkbench.org"
      onClick={[Function]}
      tabIndex="0"
      type={undefined}
    >
       Help 
    </a>
    <a
      className="dropdown-item"
      href="/account/logout"
      onClick={[Function]}
      tabIndex="0"
      type={undefined}
    >
       Logout 
    </a>
  </div>
</div>
`;
